# prefect-logging-mre

./: README.md  prefect.yaml  pyproject.toml
logging_mre/: main.py
prefect/: entrypoint.py
